# WeChatServer

./: .gitignore  CMakeLists.txt  README.md  code_standards.txt
include/: client_auth.h  client_context.h  config.h  db_manager.h  db_pool.h  unix_server.h  windows_server.h
src/: client_auth.cpp  config.cpp  db_manager.cpp  db_pool.cpp  server.cpp  unix_server.cpp  windows_server.cpp
